--- a/index.html
+++ b/index.html
@@ -1,28 +1,64 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Rich Text Editor</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote-lite.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote-lite.min.js"></script>
-  </head>
-  <body>
-    <div id="summernote"></div>
-    <script>
-      $('#summernote').summernote({
-        placeholder: '',
-        tabsize: 2,
-        height: 450,
-        toolbar: [
-          ['style', ['style']],
-          ['font', ['bold', 'underline', 'clear']],
-          ['color', ['color']],
-          ['para', ['ul', 'ol', 'paragraph']],
-          ['table', ['table']],
-          ['insert', ['link', 'picture', 'video']],
-          ['view', ['fullscreen', 'codeview', 'help']]
-        ]
-      });
-    </script>
-  </body>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="stylesheet" href="./fonts/open-sans.css" />
+  <link rel="stylesheet" href="./custom.css" />
+  <link rel="stylesheet" href="./quill.snow.css" />
+  <!-- DO NOT EDIT THE FOLLOWING LINE-->
+  <!-- <script src="APPIAN_JS_SDK_URI"></script> -->
+</head>
+
+<body>
+  <div id="parent-container">
+    <div id="quill-toolbar">
+      <span>
+        <select class="ql-header ql-wider" tooltip="Style">
+          <option class="ql-header" value="3">Large Header</option>
+          <option class="ql-header" value="4">Medium Header</option>
+          <option class="ql-header" value="5">Small Header</option>
+          <option selected>Normal Text</option>
+        </select>
+        <select class="ql-size" tooltip="Size">
+          <option value="10px">Small</option>
+          <option selected>Standard</option>
+          <option value="18px">Medium</option>
+          <option value="32px">Large</option>
+        </select>
+      </span>
+      <span>
+        <button class="ql-bold" tooltip="Bold (%+B)"></button>
+        <button class="ql-italic" tooltip="Italic (%+I)"></button>
+        <button class="ql-underline" tooltip="Underline (%+U)"></button>
+        <button class="ql-strike" tooltip="Strikethrough"></button>
+        <select class="ql-color" tooltip="Font Color"></select>
+        <select class="ql-background" tooltip="Background Color"></select>
+      </span>
+      <span>
+        <button class="ql-link" tooltip="Add Link (%+K)"></button>
+        <button class="ql-image" tooltip="Add Image (%+K)"></button>
+      </span>
+      <span>
+        <select class="ql-align" tooltip="Alignment"></select>
+        <button class="ql-indent" value="-1" tooltip="Unindent (Shift+Tab)"></button>
+        <button class="ql-indent" value="+1" tooltip="Indent (Tab)"></button>
+      </span>
+      <span>
+        <button class="ql-list" value="ordered" tooltip="Numbered List (%+Shift+7)"></button>
+        <button class="ql-list" value="bullet" tooltip="Bulleted List (%+Shift+8)"></button>
+      </span>
+      <span>
+        <button class="ql-clean" tooltip="Remove Formatting"></button>
+      </span>
+    </div>
+    <div id="quill-container"></div>
+    <div id="sizeBar">
+      <div id="usageMessage"></div>
+      <div id="usageBar"></div>
+    </div>
+  </div>
+
+  <script src="./quill.min.js"></script>
+  <script src="./index.js"></script>
+</body>
 </html>
